--- a/.gitignore
+++ b/.gitignore
@@ -88,11 +88,11 @@ build/
 # Cache directories
 .cache/
 
-# Duplicate/Development files
-Optional-Web/
+# Development files
 text.txt
 firebase_cloude.js
 
-# Auto-generated files
-functions/package-lock.json
-functions/.gitignore
+# Optional-Web specific ignores (if needed, add specific patterns like):
+# Optional-Web/dist/
+# Optional-Web/*.log
+# Optional-Web/node_modules/
